--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Configure Git identity
         run: |
-          git config --global user.name "username(github)"
-          git config --global user.email "email(github)"
+          git config --global user.name "Klu2300032633"
+          git config --global user.email "2300032633@kluniversity.in"
 
       - name: Authenticate and deploy to GitHub Pages
         env:
